# rachotil

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  stats_config.json
docs/: index.md
src/rachotil/: main.py  stats_config.json
src/rachotil.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rachotil/ssh/: config.py  connection.py  ssh.py
src/rachotil/stats/: config.py
src/rachotil/ui/: app.py  screens.py  styles.tcss
src/rachotil/ui/components/: menu.py
src/rachotil/ui/screens/: management.py  settings.py  stats.py  terminal.py
