[project]
name = "rachotil"
version = "0.0.1"
authors = [
  { name="Miloš Červinka", email="cervinkamilos08@gmail.com" },
]
description = "rachotil package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"rachotil.ui" = ["*.tcss"]

[project.scripts]
rachotil = "rachotil.main:main"

[project.urls]
Homepage = "https://github.com/Chillosh/Rachotil"
Issues = "https://github.com/Chillosh/Rachotil/issues"


[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
